[package]
name = "policy-judge"
version = "0.1.12"
description = "防火墙策略检测工具"
authors = ["policy-judge"]
edition = "2021"

[lib]
name = "policy_judge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
